Refactor Code to follow best practice (#19)
* Refactor Code to follow best practice

* Fix. Lint and format